--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,9 +2,19 @@ Package: biology
 Type: Package
 Title: A collection of biostatistics functions
 Version: 0.1.0
-Author: Who wrote it
+Authors@R: person("Murray", "Logan", email = "m.logan@aims.gov.au", role = c("aut","cre"))
 Maintainer: Murray Logan <i.obesulus@gmail.com>
 Description: A collection of functions to support the book "Biostatistical Design and Analysis Using R"
+Import:
+  epitools,
+  hier.part,
+  pwr,
+  car,
+  Hmisc
 License: GPL
 Encoding: UTF-8
 LazyData: true
+Suggests:
+  rgdal,
+  adehabitat,
+  sp,
